--- a/html-css/module-6/index.html
+++ b/html-css/module-6/index.html
@@ -60,15 +60,17 @@
                 <ul class="portfolio">
                     <li class="cart">
                         <figure>
-                            <a href="#">
+                            <div class="image-box">
                                 <ul class="social-icons">
-                                    <li class="social-icon"></li>
-                                    <li class="social-icon"></li>
-                                    <li class="social-icon"></li>
-                                    <li class="social-icon"></li>
+                                    <li class="social-icon"><a href="#"></a></li>
+                                    <li class="social-icon"><a href="#"></a></li>
+                                    <li class="social-icon"><a href="#"></a></li>
+                                    <li class="social-icon"><a href="#"></a></li>
                                 </ul>
-                                <img src="./img/portfolio/dix.jpg" alt="Matthew Dix" width="380px" height="470px">
-                            </a>
+                                <a href="#" class="img-link">
+                                    <img src="./img/portfolio/dix.jpg" alt="Matthew Dix" width="380px" height="470px">
+                                </a>
+                            </div>
                             <figcaption>
                                 <p class="name"><a href="#">Matthew Dix</a></p>
                                 <p class="profession"><a href="#">Graphic Design</a></p>
@@ -77,15 +79,17 @@
                     </li>
                     <li class="cart">
                         <figure>
-                            <a href="#">
+                            <div class="image-box">
                                 <ul class="social-icons">
-                                        <li class="social-icon"></li>
-                                        <li class="social-icon"></li>
-                                        <li class="social-icon"></li>
-                                        <li class="social-icon"></li>
+                                    <li class="social-icon"><a href="#"></a></li>
+                                    <li class="social-icon"><a href="#"></a></li>
+                                    <li class="social-icon"><a href="#"></a></li>
+                                    <li class="social-icon"><a href="#"></a></li>
                                 </ul>
-                                <img src="./img/portfolio/campbell.jpg" alt="Christopher Campbell" width="380px" height="470px">
-                            </a>
+                                <a href="#" class="img-link">
+                                    <img src="./img/portfolio/campbell.jpg" alt="Christopher Campbell" width="380px" height="470px">
+                                </a>
+                            </div>
                             <figcaption>
                                 <p class="name"><a href="#">Christopher Campbell</a></p>
                                 <p class="profession"><a href="#">Branding/UX design</a></p>
@@ -94,15 +98,17 @@
                     </li>
                     <li class="cart">
                         <figure>
-                            <a href="#">
+                            <div class="image-box">
                                 <ul class="social-icons">
-                                        <li class="social-icon"></li>
-                                        <li class="social-icon"></li>
-                                        <li class="social-icon"></li>
-                                        <li class="social-icon"></li>
+                                    <li class="social-icon"><a href="#"></a></li>
+                                    <li class="social-icon"><a href="#"></a></li>
+                                    <li class="social-icon"><a href="#"></a></li>
+                                    <li class="social-icon"><a href="#"></a></li>
                                 </ul>
-                                <img src="./img/portfolio/fertig.jpg" alt="Michael Fertig" width="380px" height="470px">
-                            </a>
+                                <a href="#" class="img-link">
+                                    <img src="./img/portfolio/fertig.jpg" alt="Michael Fertig" width="380px" height="470px">
+                                </a>
+                            </div>
                             <figcaption>
                                 <p class="name"><a href="#">Michael Fertig</a></p>
                                 <p class="profession"><a href="#">Developer</a></p>
