--- a/html-css/module-6/index.html
+++ b/html-css/module-6/index.html
@@ -124,10 +124,13 @@
             <address>Laaqiq</address>
         </div>
         <form action="#">
-            <input type="text" placeholder="   Your Email...">
+            <input type="text" placeholder="   Your Email..." name="email">
             <input type="submit" value="subscribe">
         </form>
     </footer>
-    
+
+    <div class="clos">
+        Hello<div>Flex</div><br>!
+    </div>    
 </body>
 </html>
