--- a/html-css/module-6/index.html
+++ b/html-css/module-6/index.html
@@ -125,7 +125,7 @@
         </div>
         <form action="#">
             <input type="text" placeholder="   Your Email..." name="email">
-            <input type="submit" value="subscribe">
+            <button type="submit">subscribe</button>
         </form>
     </footer>
 </body>
