Fixed email field

--- a/html-css/module-6/index.html
+++ b/html-css/module-6/index.html
@@ -124,7 +124,7 @@
             <address>Laaqiq</address>
         </div>
         <form action="#">
-            <input type="text" placeholder="   Your Email..." name="email">
+            <input type="email" placeholder="   Your Email..." name="email">
             <button type="submit">subscribe</button>
         </form>
     </footer>
