Fixed classname and fonts

--- a/html-css/module-6/index.html
+++ b/html-css/module-6/index.html
@@ -27,27 +27,27 @@
             <p class="first-section-p">We work with</p>
             <h2>Amazing services</h2>
             <ul class="services">
-                <li>
+                <li class="clock">
                     <h3>photography</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
-                <li>
+                <li class="line">
                     <h3>web design</h3>
                     <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
-                <li>
+                <li class="computer">
                     <h3>creativity</h3>
                     <p>Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
-                <li>
+                <li class="book">
                     <h3>seo</h3>
                     <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
                 </li>
-                <li>
+                <li class="home">
                     <h3>css/html</h3>
                     <p>Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</p>
                 </li>
-                <li>
+                <li class="digital">
                     <h3>digital</h3>
                     <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
@@ -61,15 +61,15 @@
                     <li class="cart">
                         <figure>
                             <div class="image-box">
-                                <ul class="social-icons">
-                                    <li class="social-icon"><a href="#"></a></li>
-                                    <li class="social-icon"><a href="#"></a></li>
-                                    <li class="social-icon"><a href="#"></a></li>
-                                    <li class="social-icon"><a href="#"></a></li>
-                                </ul>
                                 <a href="#" class="img-link">
                                     <img src="./img/portfolio/dix.jpg" alt="Matthew Dix" width="380px" height="470px">
                                 </a>
+                                <ul class="social-icons">
+                                    <li class="social-icon"><a href="#" class="facebook"></a></li>
+                                    <li class="social-icon"><a href="#" class="twitter"></a></li>
+                                    <li class="social-icon"><a href="#" class="pinterest"></a></li>
+                                    <li class="social-icon"><a href="#" class="instagram"></a></li>
+                                </ul>
                             </div>
                             <figcaption>
                                 <p class="name"><a href="#">Matthew Dix</a></p>
@@ -80,15 +80,15 @@
                     <li class="cart">
                         <figure>
                             <div class="image-box">
-                                <ul class="social-icons">
-                                    <li class="social-icon"><a href="#"></a></li>
-                                    <li class="social-icon"><a href="#"></a></li>
-                                    <li class="social-icon"><a href="#"></a></li>
-                                    <li class="social-icon"><a href="#"></a></li>
-                                </ul>
                                 <a href="#" class="img-link">
                                     <img src="./img/portfolio/campbell.jpg" alt="Christopher Campbell" width="380px" height="470px">
                                 </a>
+                                <ul class="social-icons">
+                                    <li class="social-icon"><a href="#" class="facebook"></a></li>
+                                    <li class="social-icon"><a href="#" class="twitter"></a></li>
+                                    <li class="social-icon"><a href="#" class="pinterest"></a></li>
+                                    <li class="social-icon"><a href="#" class="instagram"></a></li>
+                                </ul>
                             </div>
                             <figcaption>
                                 <p class="name"><a href="#">Christopher Campbell</a></p>
@@ -99,15 +99,15 @@
                     <li class="cart">
                         <figure>
                             <div class="image-box">
-                                <ul class="social-icons">
-                                    <li class="social-icon"><a href="#"></a></li>
-                                    <li class="social-icon"><a href="#"></a></li>
-                                    <li class="social-icon"><a href="#"></a></li>
-                                    <li class="social-icon"><a href="#"></a></li>
-                                </ul>
                                 <a href="#" class="img-link">
                                     <img src="./img/portfolio/fertig.jpg" alt="Michael Fertig" width="380px" height="470px">
                                 </a>
+                                <ul class="social-icons">
+                                    <li class="social-icon"><a href="#" class="facebook"></a></li>
+                                    <li class="social-icon"><a href="#" class="twitter"></a></li>
+                                    <li class="social-icon"><a href="#" class="pinterest"></a></li>
+                                    <li class="social-icon"><a href="#" class="instagram"></a></li>
+                                </ul>
                             </div>
                             <figcaption>
                                 <p class="name"><a href="#">Michael Fertig</a></p>
