--- a/html-css/module-7/index.html
+++ b/html-css/module-7/index.html
@@ -27,19 +27,29 @@
             <h2>Services</h2>
             <p>Proin iacul is purus consequat sem cure.</p>
             <ul class="services">
-                <li>
+                <li class="commerce">
                     <h3>E-Commerce</h3>
                     <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                 </li>
-                <li>
+                <li class="responsive">
                     <h3>Responsive Web</h3>
                     <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                 </li>
-                <li>
+                <li class="security">
                     <h3>Web Security</h3>
                     <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                 </li>
             </ul>
+        </section>
+        <section class="form-section">
+            <h2>Contact us</h2>
+            <p>Proin iacul is purus consequat sem cure.</p>
+            <form action="#" class="container">
+                <input type="text">
+                <input type="email">
+                <input type="text">
+                <input type="textarea">
+            </form>
         </section>
     </main>
     <footer></footer>
