--- a/html-css/module-7/index.html
+++ b/html-css/module-7/index.html
@@ -45,10 +45,24 @@
             <h2>Contact us</h2>
             <p>Proin iacul is purus consequat sem cure.</p>
             <form action="#" class="container">
-                <input type="text">
-                <input type="email">
-                <input type="text">
-                <input type="textarea">
+                <div class="fields">
+                    <div class="form__element">
+                        <input type="text" class="control" name="name" placeholder="Your name*" required>
+                    </div>
+                    <div class="form__element">
+                        <input type="email" class="control" name="email" placeholder="Your e-mail*" required>
+                    </div>
+                    <div class="form__element">
+                        <input type="text" class="control" name="subject" placeholder="Subject">
+                    </div>
+                    <div class="form__element form__element--big">
+                        <textarea name="message" class="control control--message" cols="30" rows="10" placeholder="Your message*" required></textarea>
+                    </div>
+                </div>
+                
+                <div class="form__element form__element--small">
+                    <button type="submit" class="control control--button">Send message</button>
+                </div>
             </form>
         </section>
     </main>
