--- a/html-css/module-8/index.html
+++ b/html-css/module-8/index.html
@@ -32,8 +32,8 @@
             <!-- </div> -->
         </div>
     </div>
-    <main>
-        <section class="holiday-partner container">
+    <main class="container">
+        <section class="holiday-partner">
             <h2>Meet a partner for your best holiday</h2>
             <ul>
                 <li class="candidate">
