Made css for desktop

--- a/html-css/module-8/index.html
+++ b/html-css/module-8/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <h1 class="visually-hidden">Share your holiday dreams</h1>
-    <div class="img-wrapper container">
+    <div class="img-wrapper">
+        <div class="container">
         <!-- <picture>
             <source media="(max-width: 767px)" srcset="./img/banner/mobile-baner.jpg">
             <source media="(min-width: 768px)" srcset="./img/banner/mobile-baner.jpg">
@@ -30,6 +31,7 @@
                 <p class="other-info">And find the perfect partner to fullfill it</p>
                 <button>Find your holiday partner</button>
             <!-- </div> -->
+            </div>
         </div>
     </div>
     <main class="container">
