--- a/html-css/module-8/index.html
+++ b/html-css/module-8/index.html
@@ -12,88 +12,66 @@
     <h1 class="visually-hidden">Share your holiday dreams</h1>
     <div class="img-wrapper">
         <div class="container">
-        <!-- <picture>
-            <source media="(max-width: 767px)" srcset="./img/banner/mobile-baner.jpg">
-            <source media="(min-width: 768px)" srcset="./img/banner/mobile-baner.jpg">
-            <source media="(min-width: 1440px)" srcset="./img/banner/mobile-baner.jpg">
-            <img src="./img/banner/mobile-baner.jpg" alt="banner image" width="320" height="540">
-        </picture> -->
-        <!-- <div class="banner-wrap"> -->
             <header>
+                <nav>
                 <ul class="autorization">
                     <li class="log-in"><button>Log in</button></li>
                     <li class="sign-up"><button>Sign up</button></li>
                 </ul>
                 <a href="#" class="site-logo" title="This is site logotype">URLAUBSGLÜCK</a>
+                </nav>
             </header>
             <div class="banner-info">
                 <p class="main-info">Share your holiday dreams</p>
                 <p class="other-info">And find the perfect partner to fullfill it</p>
                 <button>Find your holiday partner</button>
-            <!-- </div> -->
             </div>
         </div>
     </div>
-    <main class="container">
+    <main>
         <section class="holiday-partner">
-            <h2>Meet a partner for your best holiday</h2>
-            <ul>
-                <li class="candidate">
-                    <figure>
+            <div class="container">
+                <h2>Meet a partner for your best holiday</h2>
+                <ul>
+                    <li class="candidate">
                         <a class="img-link" href="#">
                             <div class="img-wrap hunter">
                                 <img src="./img/holiday-candidate/hunter.png" alt="Bradley Hunter" width="122" height="122">
                             </div>
+                            <p class="name">Bradley Hunter</p>
+                            <p class="candidate-info">Based in Chicago. I love playing tennis and loud music.</p>
                         </a>
-                        <figcaption>
-                            <div class="name"><a href="#">Bradley Hunter</a></div>
-                            <div class="candidate-info"><a href="#">Based in Chicago. I love playing tennis and loud music.</a></div>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li class="candidate">
-                    <figure>
+                    </li>
+                    <li class="candidate">
                         <a class="img-link" href="#">
                             <div class="img-wrap walker">
                                 <img src="./img/holiday-candidate/walker.png" alt="Heather Walker" width="122" height="122">
                             </div>
+                            <p class="name">Heather Walker</p>
+                            <p class="candidate-info">I'm a happy person that loves cats and climbing on mountains.</p>
                         </a>
-                        <figcaption>
-                            <div class="name"><a href="#">Heather Walker</a></div>
-                            <div class="candidate-info"><a href="#">I'm a happy person that loves cats and climbing on mountains.</a></div>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li class="candidate">
-                    <figure>
+                    </li>
+                    <li class="candidate">
                         <a class="img-link" href="#">
                             <div class="img-wrap marsha">
                                 <img src="./img/holiday-candidate/marsha.png" alt="Lucas Marsha" width="122" height="122">
                             </div>
+                            <p class="name">Lucas Marsha</p>
+                            <p class="candidate-info">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
                         </a>
-                        <figcaption>
-                            <div class="name"><a href="#">Lucas Marsha</a></div>
-                            <div class="candidate-info">
-                                <a href="#">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</a>
-                            </div>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li class="candidate">
-                    <figure>
+                    </li>
+                    <li class="candidate">
                         <a class="img-link" href="#">
                             <div class="img-wrap bradley">
                                 <img src="./img/holiday-candidate/bradley.png" alt="Bradley Hunter" width="122" height="122">
                             </div>
+                            <p class="name">Bradley Hunter</p>
+                            <p class="candidate-info">Based in Chicago. I love playing tennis and loud music.</p>
                         </a>
-                        <figcaption>
-                            <div class="name"><a href="#">Bradley Hunter</a></div>
-                            <div class="candidate-info"><a href="#">Based in Chicago. I love playing tennis and loud music.</a></div>
-                        </figcaption>
-                    </figure>
-                </li>
-            </ul>
-            <button>See other partners</button>
+                    </li>
+                </ul>
+                <button>See other partners</button>
+            </div>
         </section>
     </main>
 </body>
