--- a/html-css/module-9/index.html
+++ b/html-css/module-9/index.html
@@ -16,11 +16,17 @@
             <div class="col-12">
                     <header>
                         <nav>
-                            <ul class="autorization">
-                                <li class="log-in"><button>Log in</button></li>
-                                <li class="sign-up"><button>Sign up</button></li>
-                            </ul>
-                            <a href="#" class="site-logo" title="This is site logotype">URLAUBSGLÜCK</a>
+                            <div class="row flex-md-row-reverse justify-content-md-between align-items-md-center nav-row">
+                                <div class="col-12 col-md-4">
+                                    <ul class="autorization">
+                                        <li class="log-in"><button>Log in</button></li>
+                                        <li class="sign-up"><button>Sign up</button></li>
+                                    </ul>
+                                </div>
+                                <div class="col-12 col-md-4">
+                                    <a href="#" class="site-logo" title="This is site logotype">URLAUBSGLÜCK</a>
+                                </div>
+                            </div>
                         </nav>
                     </header>
             </div>
