Fixed margin info

--- a/html-css/module-9/index.html
+++ b/html-css/module-9/index.html
@@ -51,7 +51,7 @@
                             <div class="col-12 col-md-8 col-lg-12">
                                 <div class="partners">
                                     <div class="row">
-                                        <div class="col-12 col-md-6 col-lg-3">
+                                        <div class="col-12 col-md-6 col-lg-3 mb-custom">
                                             <a class="candidate" href="#">
                                                 <div class="img-wrap hunter">
                                                     <img src="./img/holiday-candidate/hunter.png" alt="Bradley Hunter" width="122" height="122">
@@ -60,7 +60,7 @@
                                                 <p class="candidate-info">Based in Chicago. I love playing tennis and loud music.</p>
                                             </a>
                                         </div>
-                                        <div class="col-12 col-md-6 col-lg-3">
+                                        <div class="col-12 col-md-6 col-lg-3 mb-custom">
                                             <a class="candidate" href="#">
                                                 <div class="img-wrap walker">
                                                     <img src="./img/holiday-candidate/walker.png" alt="Heather Walker" width="122" height="122">
@@ -69,7 +69,7 @@
                                                 <p class="candidate-info">I'm a happy person that loves cats and climbing on mountains.</p>
                                             </a>
                                         </div>
-                                        <div class="col-12 col-md-6 col-lg-3">
+                                        <div class="col-12 col-md-6 col-lg-3 mb-custom">
                                             <a class="candidate" href="#">
                                                 <div class="img-wrap marsha">
                                                     <img src="./img/holiday-candidate/marsha.png" alt="Lucas Marsha" width="122" height="122">
@@ -78,7 +78,7 @@
                                                 <p class="candidate-info">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
                                             </a>
                                         </div>
-                                        <div class="col-12 col-md-6 col-lg-3">
+                                        <div class="col-12 col-md-6 col-lg-3 mb-custom">
                                             <a class="candidate" href="#">
                                                 <div class="img-wrap bradley">
                                                     <img src="./img/holiday-candidate/bradley.png" alt="Bradley Hunter" width="122" height="122">
