fixed tags symantych

--- a/html-css/module-9/index.html
+++ b/html-css/module-9/index.html
@@ -39,63 +39,53 @@
             </div>
         </div>
     </div>
-    <main>
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <section class="holiday-partner">
-                        <div class="row justify-content-center">
-                            <div class="col-12">
-                                <h2>Meet a partner for your best holiday</h2>
-                            </div>
-                            <div class="col-12 col-md-8 col-lg-12">
-                                <div class="partners">
-                                    <div class="row">
-                                        <div class="col-12 col-md-6 col-lg-3 mb-custom">
-                                            <a class="candidate" href="#">
-                                                <div class="img-wrap hunter">
-                                                    <img src="./img/holiday-candidate/hunter.png" alt="Bradley Hunter" width="122" height="122">
-                                                </div>
-                                                <p class="name">Bradley Hunter</p>
-                                                <p class="candidate-info">Based in Chicago. I love playing tennis and loud music.</p>
-                                            </a>
-                                        </div>
-                                        <div class="col-12 col-md-6 col-lg-3 mb-custom">
-                                            <a class="candidate" href="#">
-                                                <div class="img-wrap walker">
-                                                    <img src="./img/holiday-candidate/walker.png" alt="Heather Walker" width="122" height="122">
-                                                </div>
-                                                <p class="name">Heather Walker</p>
-                                                <p class="candidate-info">I'm a happy person that loves cats and climbing on mountains.</p>
-                                            </a>
-                                        </div>
-                                        <div class="col-12 col-md-6 col-lg-3 mb-custom">
-                                            <a class="candidate" href="#">
-                                                <div class="img-wrap marsha">
-                                                    <img src="./img/holiday-candidate/marsha.png" alt="Lucas Marsha" width="122" height="122">
-                                                </div>
-                                                <p class="name">Lucas Marsha</p>
-                                                <p class="candidate-info">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
-                                            </a>
-                                        </div>
-                                        <div class="col-12 col-md-6 col-lg-3 mb-custom">
-                                            <a class="candidate" href="#">
-                                                <div class="img-wrap bradley">
-                                                    <img src="./img/holiday-candidate/bradley.png" alt="Bradley Hunter" width="122" height="122">
-                                                </div>
-                                                <p class="name">Bradley Hunter</p>
-                                                <p class="candidate-info">Based in Chicago. I love playing tennis and loud music.</p>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <button>See other partners</button>
-                            </div>
-                        </div>
-                    </section>
-                </div>
+    <main class="container holiday-partner">
+        <div class="row">
+            <div class="col-12">
+                <h2>Meet a partner for your best holiday</h2>
+            </div>
+        </div>
+        <ul class="row partners">
+            <li class="col-12 col-md-6 col-lg-3 mb-custom">
+                <a class="candidate" href="#">
+                    <div class="img-wrap hunter">
+                        <img src="./img/holiday-candidate/hunter.png" alt="Bradley Hunter" width="122" height="122">
+                    </div>
+                    <p class="name">Bradley Hunter</p>
+                    <p class="candidate-info">Based in Chicago. I love playing tennis and loud music.</p>
+                </a>
+            </li>
+            <li class="col-12 col-md-6 col-lg-3 mb-custom">
+                <a class="candidate" href="#">
+                    <div class="img-wrap walker">
+                        <img src="./img/holiday-candidate/walker.png" alt="Heather Walker" width="122" height="122">
+                    </div>
+                    <p class="name">Heather Walker</p>
+                    <p class="candidate-info">I'm a happy person that loves cats and climbing on mountains.</p>
+                </a>
+            </li>
+            <li class="col-12 col-md-6 col-lg-3 mb-custom">
+                <a class="candidate" href="#">
+                    <div class="img-wrap marsha">
+                        <img src="./img/holiday-candidate/marsha.png" alt="Lucas Marsha" width="122" height="122">
+                    </div>
+                    <p class="name">Lucas Marsha</p>
+                    <p class="candidate-info">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
+                </a>
+            </li>
+            <li class="col-12 col-md-6 col-lg-3 mb-custom">
+                <a class="candidate" href="#">
+                    <div class="img-wrap bradley">
+                        <img src="./img/holiday-candidate/bradley.png" alt="Bradley Hunter" width="122" height="122">
+                    </div>
+                    <p class="name">Bradley Hunter</p>
+                    <p class="candidate-info">Based in Chicago. I love playing tennis and loud music.</p>
+                </a>
+            </li>
+        </ul>
+        <div class="row">
+            <div class="col-12">
+                <button>See other partners</button>
             </div>
         </div>
     </main>
