--- a/html-css/module-8/index.html
+++ b/html-css/module-8/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1 class="visually-hidden">Share your holiday dreams</h1>
     <div class="img-wrapper">
-        <div class="container-fluid">
+        <div class="container">
             <header>
                 <nav>
                 <ul class="autorization">
