--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -5,18 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/bootstrap-grid.css">
     <link rel="stylesheet" href="./styles/style.css">
-    <title>Eighth</title>
+    <title>Tenth</title>
 </head>
 <body>
     <h1 class="visually-hidden">Share your holiday dreams</h1>
-    <div class="img-wrap">
-        <div class="container">
-            <header class="header">
-                <nav class="header__nav">
-                    <a href="#" class="site-logo" title="This is site logotype">MoGo</a>
-                </nav>
-            </header>
+    <div class="container-fluid banner-wrap">
+        <div class="row">
+            <div class="col-12">
+                <header class="page-header">
+                    <nav class="row page-nav">
+                        <div class="col-12">
+                            <a href="#" class="link site-logo" title="This is site logotype">MoGo</a>
+                        </div>
+                        <div class="col-12">
+                            <ul class="list site-navigation">
+                                    <li class="item site-navigation__item"><a href="#" class="link site-navigation__link">about</a></li>
+                                    <li class="item site-navigation__item"><a href="#" class="link site-navigation__link">service</a></li>
+                                    <li class="item site-navigation__item"><a href="#" class="link site-navigation__link">work</a></li>
+                                    <li class="item site-navigation__item"><a href="#" class="link site-navigation__link">blog</a></li>
+                                    <li class="item site-navigation__item"><a href="#" class="link site-navigation__link">contact</a></li>
+                                    <li class="item site-navigation__item site-navigation__item--cart-pg"><a href="#" class="link site-navigation__link site-navigation__link--small">
+                                        <svg class="site-navigation__icon">
+                                            <use href="./img/icon/sprite.svg#cart"></use>
+                                        </svg>
+                                    </a></li>
+                                    <li class="item site-navigation__item site-navigation__item--cart-pg"><a href="#" class="link site-navigation__link site-navigation__link--small">
+                                        <svg class="site-navigation__icon">
+                                            <use href="./img/icon/sprite.svg#search"></use>
+                                        </svg>
+                                    </a></li>
+                            </ul>
+                        </div>
+                    </nav>
+                </header>
+            </div>
         </div>
     </div>
 </body>
