--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -19,6 +19,7 @@
                         <div class="col-12">
                             <a href="#" class="link site-logo" title="This is site logotype">MoGo</a>
                         </div>
+                        <div class="col-12 menu-burger" id="menuBurger">&#9776;</div>
                         <div class="col-12">
                             <ul class="row list site-navigation" id="siteNav">
                                     <li class="col-12 item site-navigation__item"><a href="#" class="link site-navigation__link">about</a></li>
@@ -36,11 +37,15 @@
                                             <use href="./img/icon/sprite.svg#search"></use>
                                         </svg>
                                     </a></li>
-                                    <li class="col-12 item site-navigation__item site-navigation__item--burger"><a href="#" class="link site-navigation__link site-navigation__link--burger" id="menu">&#9776;</a></li>
                             </ul>
                         </div>
                     </nav>
                 </header>
+            </div>
+            <div class="col-12 banner-info">
+                <p class="prg banner-info__templ">Creative Template</p>
+                <p class="prg banner-info__main">Welcome to MoGo</p>
+                <button class="button button__banner">Learn More</button>
             </div>
         </div>
     </div>
